<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="button_string">Begin</string>
    <string name="previous">Previous</string>

    <string name="Hello_first_segment">Calculate the score for your MeNTS</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_fragment">Factores del procedimiento</string>
    <string name="factorP_1">Tiempo en quirófano</string>
    <string name="factorP_2">Tiempo de hospitalización</string>
    <string name="factorP_3">Pérdida de sangre anticipada</string>
    <string name="factorP_4">Tamaño del equipo quirúrgico</string>
    <string name="factorP_5">Probabilidad de intubación</string>
    <string name="factorP_6">Sitio quirúrgico</string>
</resources>